Fixed centering on mobile nav bar

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -66,6 +66,8 @@
 
   .nav-bar {
     flex-direction: column;
+    /* align-content: center; */
+    text-align: center;
     -webkit-backdrop-filter: blur(0);
     backdrop-filter: blur(0);
   }
@@ -74,7 +76,8 @@
     padding: 2rem 7.5rem;
     border-right: none;
     border-bottom: solid 2px #fff;
-    letter-spacing: 0.7rem;
+    font-size: 2.5rem;
+    letter-spacing: 0.85rem;
   }
 
   .nav-bar__item:last-child {
